# autocheck-anyrouter

./: .env.test.example  .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  codecov.yml  mise.toml  pyproject.toml
.github/: action.yml
.github/actions/execute-checkin/: action.yml
.github/actions/prepare-environment/: action.yml
.github/actions/setup-environment/: action.yml
.github/actions/setup-playwright/: action.yml
.github/scripts/: generate_coverage_detail.py  post_pr_comment.js
.github/workflows/: checkin.yml  ci.yml  pr-check.yml
src/: __init__.py  application.py  main.py
src/core/: __init__.py  balance_manager.py  checkin.py  checkin_service.py  github_reporter.py  privacy_handler.py
src/core/models/: __init__.py  account_result.py  notification_data.py  notification_stats.py
src/notif/: __init__.py  notification_kit.py  notify.py  trigger_manager.py
src/notif/configs/: bark.json5  dingtalk.json  dingtalk.json5  email.json  email.json5  feishu.json  feishu.json5  pushplus.json  pushplus.json5  serverpush.json  serverpush.json5  telegram.json5  wecom.json  wecom.json5
src/notif/models/: __init__.py  bark_config.py  email_config.py  notification_handler.py  notification_template.py  notify_trigger.py  pushplus_config.py  serverpush_config.py  telegram_config.py  webhook_config.py
src/notif/senders/: __init__.py  bark_sender.py  dingtalk_sender.py  email_sender.py  feishu_sender.py  pushplus_sender.py  serverpush_sender.py  telegram_sender.py  wecom_sender.py
src/tools/: __init__.py
src/tools/logger/: __init__.py  log_level.py  logger.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  checkin_service.py  data.py  env.py  file.py  mock_dependencies.py  notification.py
tests/integration/: test_checkin_flow.py  test_error_handling.py  test_features.py  test_real_notifications.py  test_super_integration.py
tests/tools/: __init__.py  data_builders.py
tests/unit/: test_balance_manager.py  test_bark_sender.py  test_config_parsing.py  test_data_models.py  test_email_sender.py  test_feishu_sender.py  test_notification.py  test_notification_kit.py  test_privacy_handler.py  test_send_functions.py  test_senders.py  test_template_rendering.py  test_trigger_manager.py
